--- a/SportsStore.WebUI/Web.config
+++ b/SportsStore.WebUI/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="EFDbContext" connectionString="Data Source=IANS_LAPTOP\SQLEXPRESS;Initial Catalog=SportsStore;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="EFDbContext" connectionString="Data Source=IANS_LAPTOP\SQLEXPRESS;Initial Catalog=SportsStore;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="EFDbContext" connectionString="Data Source=CZC24192YQ\SQLEXPRESS;Initial Catalog=SportsStore;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
