--- a/SportsStore.UnitTests/SportsStore.UnitTests.csproj
+++ b/SportsStore.UnitTests/SportsStore.UnitTests.csproj
@@ -105,6 +105,7 @@
     <Compile Include="CartTest.cs" />
     <Compile Include="ProductControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ImageTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
